fix: crupdate user wite singup and test